--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-streamlit
-st_pages
-numpy
-pandas
-seaborn
-matplotlib
-bs4
-requests
-selenium
-urllib
-time
-csv
+streamlit==1.22.0
+st_pages==0.4.1
+numpy==1.23.5
+pandas==2.0.1
+seaborn==0.12.2
+matplotlib==3.7.1
+bs4==0.0.1
+requests==2.30.0
+selenium==4.9.1
+urllib3==1.26.16
+
+
